...
        },
      })}
    >
      <Tab.Screen
        name="Home"
        component={FeedScreen}
        options={{ tabBarLabel: "Início", tabBarAccessibilityLabel: "Página inicial" }}
      />
      <Tab.Screen
        name="Jobs"
        component={VagasScreen}
        options={{ tabBarLabel: "Vagas", tabBarAccessibilityLabel: "Vagas" }}
      />
...
